parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> excute_list
Rule 2     excute_list -> excute_list_end
Rule 3     excute_list -> excute_list_iter
Rule 4     excute_list_iter -> excute_list excute_node
Rule 5     excute_list_end -> excute_node
Rule 6     excute_node -> variable_declaration
Rule 7     excute_node -> function_dec
Rule 8     variable_declaration -> VAR declaration END
Rule 9     variable_declaration -> VAL declaration END
Rule 10    declaration -> ID DEF type liquid_type
Rule 11    liquid_type -> LPAREN expression RPAREN give_value
Rule 12    liquid_type -> give_value
Rule 13    give_value -> ASSIGN value
Rule 14    give_value -> <empty>
Rule 15    type -> INT
Rule 16    type -> FLOAT
Rule 17    type -> STRING
Rule 18    type -> BOOL
Rule 19    type -> VOID
Rule 20    type -> CHAR
Rule 21    type -> LSQBRAC type RSQBRAC
Rule 22    value -> expression
Rule 23    value -> stringv
Rule 24    value -> charv
Rule 25    value -> NEWARRAY LSQBRAC expression RSQBRAC ps
Rule 26    value -> <empty>
Rule 27    ps -> LSQBRAC expression RSQBRAC ps
Rule 28    ps -> <empty>
Rule 29    array_or_func -> LSQBRAC expression RSQBRAC assg_arr_value
Rule 30    array_or_func -> assgn_statement_or_func_call
Rule 31    array_or_func -> <empty>
Rule 32    assg_arr_value -> give_value
Rule 33    assg_arr_value -> array_or_func
Rule 34    assg_arr_value -> <empty>
Rule 35    expression -> expression_v PLUS expression
Rule 36    expression -> expression_v MINUS expression
Rule 37    expression -> expression_v TIMES expression
Rule 38    expression -> expression_v DIVIDE expression
Rule 39    expression -> expression_v MOD expression
Rule 40    expression -> expression_v MUL expression
Rule 41    expression -> expression_v
Rule 42    expression -> unary_minus_exp
Rule 43    unary_minus_exp -> MINUS expression
Rule 44    expression_v -> LPAREN expression RPAREN
Rule 45    expression_v -> number
Rule 46    expression_v -> real
Rule 47    expression_v -> boolv
Rule 48    expression_v -> ID array_or_func
Rule 49    stringv -> STRINGV
Rule 50    charv -> CHARV
Rule 51    number -> NUMBER
Rule 52    real -> REAL
Rule 53    boolv -> BOOLV
Rule 54    expression -> expression OR expression
Rule 55    expression -> expression AND expression
Rule 56    expression -> NEG expression
Rule 57    expression -> expression GT expression
Rule 58    expression -> expression GTEQ expression
Rule 59    expression -> expression LT expression
Rule 60    expression -> expression LTEQ expression
Rule 61    expression -> expression EQ expression
Rule 62    expression -> expression NEQ expression
Rule 63    function_dec -> FUNCTION ID field_list with_type_or_not with_body_or_not
Rule 64    with_type_or_not -> DEF type
Rule 65    with_type_or_not -> <empty>
Rule 66    with_body_or_not -> function_dec_no_body
Rule 67    with_body_or_not -> function_dec_with_body
Rule 68    function_dec_with_body -> LCBRAC body RCBRAC
Rule 69    function_dec_no_body -> END
Rule 70    field_list -> LPAREN empty_or_field RPAREN
Rule 71    empty_or_field -> empty_list
Rule 72    empty_or_field -> ne_field_list
Rule 73    ne_field_list -> ne_field_list_end
Rule 74    ne_field_list -> ne_field_list_iter
Rule 75    ne_field_list_iter -> ne_field_list COMMA field
Rule 76    ne_field_list_end -> field
Rule 77    field -> VAL ID DEF type
Rule 78    field -> VAR ID DEF type
Rule 79    body -> statement_list
Rule 80    statement_list -> statement_list_end
Rule 81    statement_list -> statement_list_iter
Rule 82    statement_list_iter -> statement_list statement
Rule 83    statement_list_end -> statement
Rule 84    statement -> variable_declaration
Rule 85    statement -> value END
Rule 86    statement -> if_statement
Rule 87    statement -> while_statement
Rule 88    assgn_statement_or_func_call -> assignment_statement
Rule 89    assgn_statement_or_func_call -> procedure_or_function_call
Rule 90    assignment_statement -> give_value
Rule 91    procedure_or_function_call -> param_list
Rule 92    param_list -> LPAREN empty_or_param RPAREN
Rule 93    empty_or_param -> ne_param_list
Rule 94    ne_param_list -> ne_param_list_end
Rule 95    ne_param_list -> ne_param_list_iter
Rule 96    ne_param_list_iter -> empty_or_param COMMA value
Rule 97    ne_param_list_end -> value
Rule 98    if_statement -> IF expression LCBRAC statement_list RCBRAC else_statement
Rule 99    else_statement -> ELSE else_or_if
Rule 100   else_statement -> <empty>
Rule 101   else_or_if -> LCBRAC statement_list RCBRAC
Rule 102   else_or_if -> if_statement
Rule 103   while_statement -> WHILE expression LCBRAC statement_list RCBRAC
Rule 104   empty -> <empty>
Rule 105   empty_list -> empty

Terminals, with rules where they appear

AND                  : 55
ASSIGN               : 13
BOOL                 : 18
BOOLV                : 53
CHAR                 : 20
CHARV                : 50
COMMA                : 75 96
DEF                  : 10 64 77 78
DIVIDE               : 38
ELSE                 : 99
END                  : 8 9 69 85
EQ                   : 61
FLOAT                : 16
FUNCTION             : 63
GT                   : 57
GTEQ                 : 58
ID                   : 10 48 63 77 78
IF                   : 98
INT                  : 15
LCBRAC               : 68 98 101 103
LPAREN               : 11 44 70 92
LSQBRAC              : 21 25 27 29
LT                   : 59
LTEQ                 : 60
MINUS                : 36 43
MOD                  : 39
MUL                  : 40
NEG                  : 56
NEQ                  : 62
NEWARRAY             : 25
NUMBER               : 51
OR                   : 54
PLUS                 : 35
RCBRAC               : 68 98 101 103
REAL                 : 52
RPAREN               : 11 44 70 92
RSQBRAC              : 21 25 27 29
STRING               : 17
STRINGV              : 49
TIMES                : 37
VAL                  : 9 77
VAR                  : 8 78
VOID                 : 19
WHILE                : 103
error                : 

Nonterminals, with rules where they appear

array_or_func        : 33 48
assg_arr_value       : 29
assgn_statement_or_func_call : 30
assignment_statement : 88
body                 : 68
boolv                : 47
charv                : 24
declaration          : 8 9
else_or_if           : 99
else_statement       : 98
empty                : 105
empty_list           : 71
empty_or_field       : 70
empty_or_param       : 92 96
excute_list          : 1 4
excute_list_end      : 2
excute_list_iter     : 3
excute_node          : 4 5
expression           : 11 22 25 27 29 35 36 37 38 39 40 43 44 54 54 55 55 56 57 57 58 58 59 59 60 60 61 61 62 62 98 103
expression_v         : 35 36 37 38 39 40 41
field                : 75 76
field_list           : 63
function_dec         : 7
function_dec_no_body : 66
function_dec_with_body : 67
give_value           : 11 12 32 90
if_statement         : 86 102
liquid_type          : 10
ne_field_list        : 72 75
ne_field_list_end    : 73
ne_field_list_iter   : 74
ne_param_list        : 93
ne_param_list_end    : 94
ne_param_list_iter   : 95
number               : 45
param_list           : 91
procedure_or_function_call : 89
ps                   : 25 27
real                 : 46
start                : 0
statement            : 82 83
statement_list       : 79 82 98 101 103
statement_list_end   : 80
statement_list_iter  : 81
stringv              : 23
type                 : 10 21 64 77 78
unary_minus_exp      : 42
value                : 13 85 96 97
variable_declaration : 6 84
while_statement      : 87
with_body_or_not     : 63
with_type_or_not     : 63

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . excute_list
    (2) excute_list -> . excute_list_end
    (3) excute_list -> . excute_list_iter
    (5) excute_list_end -> . excute_node
    (4) excute_list_iter -> . excute_list excute_node
    (6) excute_node -> . variable_declaration
    (7) excute_node -> . function_dec
    (8) variable_declaration -> . VAR declaration END
    (9) variable_declaration -> . VAL declaration END
    (63) function_dec -> . FUNCTION ID field_list with_type_or_not with_body_or_not

    VAR             shift and go to state 8
    VAL             shift and go to state 9
    FUNCTION        shift and go to state 10

    start                          shift and go to state 1
    excute_list                    shift and go to state 2
    excute_list_end                shift and go to state 3
    excute_list_iter               shift and go to state 4
    excute_node                    shift and go to state 5
    variable_declaration           shift and go to state 6
    function_dec                   shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> excute_list .
    (4) excute_list_iter -> excute_list . excute_node
    (6) excute_node -> . variable_declaration
    (7) excute_node -> . function_dec
    (8) variable_declaration -> . VAR declaration END
    (9) variable_declaration -> . VAL declaration END
    (63) function_dec -> . FUNCTION ID field_list with_type_or_not with_body_or_not

    $end            reduce using rule 1 (start -> excute_list .)
    VAR             shift and go to state 8
    VAL             shift and go to state 9
    FUNCTION        shift and go to state 10

    excute_node                    shift and go to state 11
    variable_declaration           shift and go to state 6
    function_dec                   shift and go to state 7

state 3

    (2) excute_list -> excute_list_end .

    VAR             reduce using rule 2 (excute_list -> excute_list_end .)
    VAL             reduce using rule 2 (excute_list -> excute_list_end .)
    FUNCTION        reduce using rule 2 (excute_list -> excute_list_end .)
    $end            reduce using rule 2 (excute_list -> excute_list_end .)


state 4

    (3) excute_list -> excute_list_iter .

    VAR             reduce using rule 3 (excute_list -> excute_list_iter .)
    VAL             reduce using rule 3 (excute_list -> excute_list_iter .)
    FUNCTION        reduce using rule 3 (excute_list -> excute_list_iter .)
    $end            reduce using rule 3 (excute_list -> excute_list_iter .)


state 5

    (5) excute_list_end -> excute_node .

    VAR             reduce using rule 5 (excute_list_end -> excute_node .)
    VAL             reduce using rule 5 (excute_list_end -> excute_node .)
    FUNCTION        reduce using rule 5 (excute_list_end -> excute_node .)
    $end            reduce using rule 5 (excute_list_end -> excute_node .)


state 6

    (6) excute_node -> variable_declaration .

    VAR             reduce using rule 6 (excute_node -> variable_declaration .)
    VAL             reduce using rule 6 (excute_node -> variable_declaration .)
    FUNCTION        reduce using rule 6 (excute_node -> variable_declaration .)
    $end            reduce using rule 6 (excute_node -> variable_declaration .)


state 7

    (7) excute_node -> function_dec .

    VAR             reduce using rule 7 (excute_node -> function_dec .)
    VAL             reduce using rule 7 (excute_node -> function_dec .)
    FUNCTION        reduce using rule 7 (excute_node -> function_dec .)
    $end            reduce using rule 7 (excute_node -> function_dec .)


state 8

    (8) variable_declaration -> VAR . declaration END
    (10) declaration -> . ID DEF type liquid_type

    ID              shift and go to state 13

    declaration                    shift and go to state 12

state 9

    (9) variable_declaration -> VAL . declaration END
    (10) declaration -> . ID DEF type liquid_type

    ID              shift and go to state 13

    declaration                    shift and go to state 14

state 10

    (63) function_dec -> FUNCTION . ID field_list with_type_or_not with_body_or_not

    ID              shift and go to state 15


state 11

    (4) excute_list_iter -> excute_list excute_node .

    VAR             reduce using rule 4 (excute_list_iter -> excute_list excute_node .)
    VAL             reduce using rule 4 (excute_list_iter -> excute_list excute_node .)
    FUNCTION        reduce using rule 4 (excute_list_iter -> excute_list excute_node .)
    $end            reduce using rule 4 (excute_list_iter -> excute_list excute_node .)


state 12

    (8) variable_declaration -> VAR declaration . END

    END             shift and go to state 16


state 13

    (10) declaration -> ID . DEF type liquid_type

    DEF             shift and go to state 17


state 14

    (9) variable_declaration -> VAL declaration . END

    END             shift and go to state 18


state 15

    (63) function_dec -> FUNCTION ID . field_list with_type_or_not with_body_or_not
    (70) field_list -> . LPAREN empty_or_field RPAREN

    LPAREN          shift and go to state 20

    field_list                     shift and go to state 19

state 16

    (8) variable_declaration -> VAR declaration END .

    VAR             reduce using rule 8 (variable_declaration -> VAR declaration END .)
    VAL             reduce using rule 8 (variable_declaration -> VAR declaration END .)
    FUNCTION        reduce using rule 8 (variable_declaration -> VAR declaration END .)
    $end            reduce using rule 8 (variable_declaration -> VAR declaration END .)
    NEWARRAY        reduce using rule 8 (variable_declaration -> VAR declaration END .)
    IF              reduce using rule 8 (variable_declaration -> VAR declaration END .)
    WHILE           reduce using rule 8 (variable_declaration -> VAR declaration END .)
    NEG             reduce using rule 8 (variable_declaration -> VAR declaration END .)
    STRINGV         reduce using rule 8 (variable_declaration -> VAR declaration END .)
    CHARV           reduce using rule 8 (variable_declaration -> VAR declaration END .)
    LPAREN          reduce using rule 8 (variable_declaration -> VAR declaration END .)
    ID              reduce using rule 8 (variable_declaration -> VAR declaration END .)
    MINUS           reduce using rule 8 (variable_declaration -> VAR declaration END .)
    NUMBER          reduce using rule 8 (variable_declaration -> VAR declaration END .)
    REAL            reduce using rule 8 (variable_declaration -> VAR declaration END .)
    BOOLV           reduce using rule 8 (variable_declaration -> VAR declaration END .)
    END             reduce using rule 8 (variable_declaration -> VAR declaration END .)
    RCBRAC          reduce using rule 8 (variable_declaration -> VAR declaration END .)


state 17

    (10) declaration -> ID DEF . type liquid_type
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL
    (19) type -> . VOID
    (20) type -> . CHAR
    (21) type -> . LSQBRAC type RSQBRAC

    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    STRING          shift and go to state 24
    BOOL            shift and go to state 25
    VOID            shift and go to state 26
    CHAR            shift and go to state 27
    LSQBRAC         shift and go to state 28

    type                           shift and go to state 21

state 18

    (9) variable_declaration -> VAL declaration END .

    VAR             reduce using rule 9 (variable_declaration -> VAL declaration END .)
    VAL             reduce using rule 9 (variable_declaration -> VAL declaration END .)
    FUNCTION        reduce using rule 9 (variable_declaration -> VAL declaration END .)
    $end            reduce using rule 9 (variable_declaration -> VAL declaration END .)
    NEWARRAY        reduce using rule 9 (variable_declaration -> VAL declaration END .)
    IF              reduce using rule 9 (variable_declaration -> VAL declaration END .)
    WHILE           reduce using rule 9 (variable_declaration -> VAL declaration END .)
    NEG             reduce using rule 9 (variable_declaration -> VAL declaration END .)
    STRINGV         reduce using rule 9 (variable_declaration -> VAL declaration END .)
    CHARV           reduce using rule 9 (variable_declaration -> VAL declaration END .)
    LPAREN          reduce using rule 9 (variable_declaration -> VAL declaration END .)
    ID              reduce using rule 9 (variable_declaration -> VAL declaration END .)
    MINUS           reduce using rule 9 (variable_declaration -> VAL declaration END .)
    NUMBER          reduce using rule 9 (variable_declaration -> VAL declaration END .)
    REAL            reduce using rule 9 (variable_declaration -> VAL declaration END .)
    BOOLV           reduce using rule 9 (variable_declaration -> VAL declaration END .)
    END             reduce using rule 9 (variable_declaration -> VAL declaration END .)
    RCBRAC          reduce using rule 9 (variable_declaration -> VAL declaration END .)


state 19

    (63) function_dec -> FUNCTION ID field_list . with_type_or_not with_body_or_not
    (64) with_type_or_not -> . DEF type
    (65) with_type_or_not -> .

    DEF             shift and go to state 30
    END             reduce using rule 65 (with_type_or_not -> .)
    LCBRAC          reduce using rule 65 (with_type_or_not -> .)

    with_type_or_not               shift and go to state 29

state 20

    (70) field_list -> LPAREN . empty_or_field RPAREN
    (71) empty_or_field -> . empty_list
    (72) empty_or_field -> . ne_field_list
    (105) empty_list -> . empty
    (73) ne_field_list -> . ne_field_list_end
    (74) ne_field_list -> . ne_field_list_iter
    (104) empty -> .
    (76) ne_field_list_end -> . field
    (75) ne_field_list_iter -> . ne_field_list COMMA field
    (77) field -> . VAL ID DEF type
    (78) field -> . VAR ID DEF type

    RPAREN          reduce using rule 104 (empty -> .)
    VAL             shift and go to state 38
    VAR             shift and go to state 39

    empty_or_field                 shift and go to state 31
    empty_list                     shift and go to state 32
    ne_field_list                  shift and go to state 33
    empty                          shift and go to state 34
    ne_field_list_end              shift and go to state 35
    ne_field_list_iter             shift and go to state 36
    field                          shift and go to state 37

state 21

    (10) declaration -> ID DEF type . liquid_type
    (11) liquid_type -> . LPAREN expression RPAREN give_value
    (12) liquid_type -> . give_value
    (13) give_value -> . ASSIGN value
    (14) give_value -> .

    LPAREN          shift and go to state 41
    ASSIGN          shift and go to state 43
    END             reduce using rule 14 (give_value -> .)

    liquid_type                    shift and go to state 40
    give_value                     shift and go to state 42

state 22

    (15) type -> INT .

    LPAREN          reduce using rule 15 (type -> INT .)
    ASSIGN          reduce using rule 15 (type -> INT .)
    END             reduce using rule 15 (type -> INT .)
    RSQBRAC         reduce using rule 15 (type -> INT .)
    LCBRAC          reduce using rule 15 (type -> INT .)
    COMMA           reduce using rule 15 (type -> INT .)
    RPAREN          reduce using rule 15 (type -> INT .)


state 23

    (16) type -> FLOAT .

    LPAREN          reduce using rule 16 (type -> FLOAT .)
    ASSIGN          reduce using rule 16 (type -> FLOAT .)
    END             reduce using rule 16 (type -> FLOAT .)
    RSQBRAC         reduce using rule 16 (type -> FLOAT .)
    LCBRAC          reduce using rule 16 (type -> FLOAT .)
    COMMA           reduce using rule 16 (type -> FLOAT .)
    RPAREN          reduce using rule 16 (type -> FLOAT .)


state 24

    (17) type -> STRING .

    LPAREN          reduce using rule 17 (type -> STRING .)
    ASSIGN          reduce using rule 17 (type -> STRING .)
    END             reduce using rule 17 (type -> STRING .)
    RSQBRAC         reduce using rule 17 (type -> STRING .)
    LCBRAC          reduce using rule 17 (type -> STRING .)
    COMMA           reduce using rule 17 (type -> STRING .)
    RPAREN          reduce using rule 17 (type -> STRING .)


state 25

    (18) type -> BOOL .

    LPAREN          reduce using rule 18 (type -> BOOL .)
    ASSIGN          reduce using rule 18 (type -> BOOL .)
    END             reduce using rule 18 (type -> BOOL .)
    RSQBRAC         reduce using rule 18 (type -> BOOL .)
    LCBRAC          reduce using rule 18 (type -> BOOL .)
    COMMA           reduce using rule 18 (type -> BOOL .)
    RPAREN          reduce using rule 18 (type -> BOOL .)


state 26

    (19) type -> VOID .

    LPAREN          reduce using rule 19 (type -> VOID .)
    ASSIGN          reduce using rule 19 (type -> VOID .)
    END             reduce using rule 19 (type -> VOID .)
    RSQBRAC         reduce using rule 19 (type -> VOID .)
    LCBRAC          reduce using rule 19 (type -> VOID .)
    COMMA           reduce using rule 19 (type -> VOID .)
    RPAREN          reduce using rule 19 (type -> VOID .)


state 27

    (20) type -> CHAR .

    LPAREN          reduce using rule 20 (type -> CHAR .)
    ASSIGN          reduce using rule 20 (type -> CHAR .)
    END             reduce using rule 20 (type -> CHAR .)
    RSQBRAC         reduce using rule 20 (type -> CHAR .)
    LCBRAC          reduce using rule 20 (type -> CHAR .)
    COMMA           reduce using rule 20 (type -> CHAR .)
    RPAREN          reduce using rule 20 (type -> CHAR .)


state 28

    (21) type -> LSQBRAC . type RSQBRAC
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL
    (19) type -> . VOID
    (20) type -> . CHAR
    (21) type -> . LSQBRAC type RSQBRAC

    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    STRING          shift and go to state 24
    BOOL            shift and go to state 25
    VOID            shift and go to state 26
    CHAR            shift and go to state 27
    LSQBRAC         shift and go to state 28

    type                           shift and go to state 44

state 29

    (63) function_dec -> FUNCTION ID field_list with_type_or_not . with_body_or_not
    (66) with_body_or_not -> . function_dec_no_body
    (67) with_body_or_not -> . function_dec_with_body
    (69) function_dec_no_body -> . END
    (68) function_dec_with_body -> . LCBRAC body RCBRAC

    END             shift and go to state 48
    LCBRAC          shift and go to state 49

    with_body_or_not               shift and go to state 45
    function_dec_no_body           shift and go to state 46
    function_dec_with_body         shift and go to state 47

state 30

    (64) with_type_or_not -> DEF . type
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL
    (19) type -> . VOID
    (20) type -> . CHAR
    (21) type -> . LSQBRAC type RSQBRAC

    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    STRING          shift and go to state 24
    BOOL            shift and go to state 25
    VOID            shift and go to state 26
    CHAR            shift and go to state 27
    LSQBRAC         shift and go to state 28

    type                           shift and go to state 50

state 31

    (70) field_list -> LPAREN empty_or_field . RPAREN

    RPAREN          shift and go to state 51


state 32

    (71) empty_or_field -> empty_list .

    RPAREN          reduce using rule 71 (empty_or_field -> empty_list .)


state 33

    (72) empty_or_field -> ne_field_list .
    (75) ne_field_list_iter -> ne_field_list . COMMA field

    RPAREN          reduce using rule 72 (empty_or_field -> ne_field_list .)
    COMMA           shift and go to state 52


state 34

    (105) empty_list -> empty .

    RPAREN          reduce using rule 105 (empty_list -> empty .)


state 35

    (73) ne_field_list -> ne_field_list_end .

    COMMA           reduce using rule 73 (ne_field_list -> ne_field_list_end .)
    RPAREN          reduce using rule 73 (ne_field_list -> ne_field_list_end .)


state 36

    (74) ne_field_list -> ne_field_list_iter .

    COMMA           reduce using rule 74 (ne_field_list -> ne_field_list_iter .)
    RPAREN          reduce using rule 74 (ne_field_list -> ne_field_list_iter .)


state 37

    (76) ne_field_list_end -> field .

    COMMA           reduce using rule 76 (ne_field_list_end -> field .)
    RPAREN          reduce using rule 76 (ne_field_list_end -> field .)


state 38

    (77) field -> VAL . ID DEF type

    ID              shift and go to state 53


state 39

    (78) field -> VAR . ID DEF type

    ID              shift and go to state 54


state 40

    (10) declaration -> ID DEF type liquid_type .

    END             reduce using rule 10 (declaration -> ID DEF type liquid_type .)


state 41
